[package]
name = "dbg_mac"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Handy debug only macros."
homepage = "https://github.com/IsaccBarker/dbg_mac"
repository = "https://github.com/IsaccBarker/dbg_mac"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
